# AlphaX

./: .gitignore  README.md  akshar.py  example.py  pyproject.toml  requirements.txt  stock_components_latest.py  updata.py
dfcf/: __init__.py  cooike.py  enums.py  get_stock_dfcf.py  kline_to_dataframe.py  updata_stock_dfcf.py
eastmoney/: __init__.py  config.yaml  config_manager.py  core.py  csv.py  enums.py  indicators.py  test.py  utils.py
examples/: get_dfcf.py  get_tx.py
scratch/: plot_kline.py  strategy_backtest.py
tx/: __init__.py  compute_date.py  enums.py  gen_random_same_length.py  get_stock_tx.py  init_stock_tx.py  updata_stock_tx.py
utils/: __init__.py  config_manager.py  csv.py  indicators.py  logger.py  transition_secid.py
