[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.18.50",
    "anyio==4.13.0",
    "beautifulsoup4==4.14.3",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==46.0.7",
    "curl-cffi==0.14.0",
    "cycler==0.12.1",
    "datetime==6.0",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "fonttools==4.62.1",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.25.2",
    "idna==3.11",
    "jsonpath==0.82.2",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "matplotlib==3.10.8",
    "mini-racer==0.14.1",
    "mootdx==0.11.7",
    "mplfinance==0.12.10b0",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "playwright==1.58.0",
    "prettytable==3.17.0",
    "py-mini-racer==0.6.0",
    "pycparser==3.0",
    "pydevd-pycharm==261.22158.340",
    "pyee==13.0.1",
    "pyparsing==3.3.2",
    "pytdx==1.72",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "requests==2.33.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "tabulate==0.10.0",
    "tdxpy==0.2.7",
    "tenacity==8.5.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "webencodings==0.5.1",
    "win32-setctime==1.2.0",
    "xlrd==2.0.2",
    "zope-interface==8.3",
]
